<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImages"
        android:layout_margin="@dimen/common_margin_min"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:numColumns="3"
        android:horizontalSpacing="4dp"
        android:verticalSpacing="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnUpload"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_images"
        android:layout_marginHorizontal="@dimen/common_margin_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnGallery"
        style="@style/Button"
        android:drawableStart="@drawable/ic_backup"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnGallery"
        style="@style/Button"
        android:drawableStart="@drawable/ic_camera"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCamera"
        style="@style/Button"
        android:drawableStart="@drawable/ic_insert_photo"/>

</androidx.constraintlayout.widget.ConstraintLayout>