<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="@dimen/common_margin_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_profile"
        tools:ignore="ContentDescription"
        app:tint="@color/black_light" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_min"
        app:layout_constraintTop_toTopOf="@id/ivPhoto"
        app:layout_constraintStart_toEndOf="@id/ivPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/tvQuantity"
        style="@style/TextMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_min"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@id/ivPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/quantity"/>

    <TextView
        android:id="@+id/tvLevel"
        style="@style/TextMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_min"
        app:layout_constraintTop_toBottomOf="@id/tvQuantity"
        app:layout_constraintStart_toEndOf="@id/ivPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/level"/>

    <View
        android:id="@+id/vwDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="@dimen/common_margin_high"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto"
        android:background="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/vwDivider"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin_min"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:letterSpacing="0.2"
                android:text="@string/post"/>

            <ImageView
                android:id="@+id/ivPost1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="@dimen/common_margin_min"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                android:src="@drawable/post1"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/tvPost1"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin_min"
                app:layout_constraintTop_toBottomOf="@id/ivPost1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/dummy_Text"/>

            <ImageView
                android:id="@+id/ivPost2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="@dimen/common_margin_min"
                app:layout_constraintTop_toBottomOf="@+id/tvPost1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                android:src="@drawable/post2"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/tvPost2"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin_min"
                app:layout_constraintTop_toBottomOf="@id/ivPost2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/dummy_Text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>